Models, Actions, Views
+ New Lucid Chart for ER
+ Update to models
+ Updates to controller actions
+ New views
+ Data annotations / validation

--- a/SouthDakotaDiaspora/Site/Site.csproj
+++ b/SouthDakotaDiaspora/Site/Site.csproj
@@ -198,6 +198,10 @@
     <Content Include="Views\Timeline\Event.cshtml" />
     <Content Include="Views\Games\Index.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Games\Create.cshtml" />
+    <Content Include="Views\Games\Details.cshtml" />
+    <Content Include="Views\Games\NotFound.cshtml" />
+    <Content Include="Views\Games\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
