--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,10 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\GameType.cs" />
-    <Compile Include="Models\TimelineEventType.cs" />
     <Compile Include="Models\PlatformType.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\TimelineEvent.cs" />
