--- a/SouthDakotaDiaspora/Site/packages.config
+++ b/SouthDakotaDiaspora/Site/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="6.0.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="jQuery.UI.Combined" version="1.13.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
