Azure SQL Updates
+ Added sql database implementation for the Games table
+ SQL tables were automatically generated on first test

--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Services\IGameData.cs" />
     <Compile Include="Services\ITimelineEventData.cs" />
     <Compile Include="Services\SouthDakotaDiasporaDbContext.cs" />
+    <Compile Include="Services\SqlGameData.cs" />
     <Compile Include="Services\TestGameData.cs" />
     <Compile Include="Services\TestTimelineEventData.cs" />
     <Compile Include="Services\TestUserData.cs" />
