--- a/SouthDakotaDiaspora/Site/Web.config
+++ b/SouthDakotaDiaspora/Site/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="SouthDakotaDiasporaDbContext" connectionString="Server=tcp:south-dakota-diaspora.database.windows.net,1433;Initial Catalog=sdcloud;Persist Security Info=False;User ID=cabreu;Password=nohackingdude123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
