Add Web Config - Move Connection Strings to Other File

--- a/.gitignore
+++ b/.gitignore
@@ -332,4 +332,6 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
-SouthDakotaDiaspora/Site/Web.config
+
+# Cam's Custom Ignore Files
+SouthDakotaDiaspora/Site/ConnectionStrings.config
