Login and Logout System
+ Home page rework
+ Log In Function/View
+ Create Account Function/View
+ Users now work with the SQL database
+ Log out system
+ Basic Testing

--- a/SouthDakotaDiaspora/Site/Site.csproj
+++ b/SouthDakotaDiaspora/Site/Site.csproj
@@ -256,6 +256,9 @@
     <Content Include="Views\Games\NotFound.cshtml" />
     <Content Include="Views\Games\Edit.cshtml" />
     <Content Include="Views\Games\Delete.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Home\LogoutSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
