--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Services\ITimelineEventData.cs" />
     <Compile Include="Services\SouthDakotaDiasporaDbContext.cs" />
     <Compile Include="Services\SqlGameData.cs" />
+    <Compile Include="Services\SqlUserData.cs" />
     <Compile Include="Services\TestGameData.cs" />
     <Compile Include="Services\TestTimelineEventData.cs" />
     <Compile Include="Services\TestUserData.cs" />
