--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\TimelineEvent.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserRoleType.cs" />
     <Compile Include="Models\Video.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IGameData.cs" />
