Generalized 'Activities' (schema rework)
classes such as "Game", "Show", "Book", and "Project" are now flattened into one SQL table ("Activity"). This is due to entity framework implementing what is called "Table per Hierarchy" (or TPH for short).

I've worked the Timeline Event creation page to allow selecting existing games. Choosing a game links that event correctly to the activity row in SQL, which can then be used to gather information about the activity.

I've also implemented various site fixes and style updates

--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -94,9 +94,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\202112162222318_InitialCreate.cs" />
-    <Compile Include="Migrations\202112162222318_InitialCreate.designer.cs">
-      <DependentUpon>202112162222318_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202112272247549_Initial.cs" />
+    <Compile Include="Migrations\202112272247549_Initial.designer.cs">
+      <DependentUpon>202112272247549_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Activity.cs" />
@@ -112,9 +112,11 @@
     <Compile Include="Models\Video.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DiscordNotifier.cs" />
+    <Compile Include="Services\IActivityData.cs" />
     <Compile Include="Services\IGameData.cs" />
     <Compile Include="Services\ITimelineEventData.cs" />
     <Compile Include="Services\SouthDakotaDiasporaDbContext.cs" />
+    <Compile Include="Services\SqlActivityData.cs" />
     <Compile Include="Services\SqlGameData.cs" />
     <Compile Include="Services\SqlTimelineEventData.cs" />
     <Compile Include="Services\SqlUserData.cs" />
@@ -128,12 +130,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202112162222318_InitialCreate.resx">
-      <DependentUpon>202112162222318_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <EmbeddedResource Include="Migrations\202112272247549_Initial.resx">
+      <DependentUpon>202112272247549_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
