Book Links and Timeline Updates
+ Book index page now shows url links
+ Url links are only clickable if they have a valid URI path, otherwise just text
+ Url opens in new tab and leaves current page alone (thank goodness...javascript)
+ Timeline page now features the event type using a cute symbol

--- a/SouthDakotaDiaspora/Site/Site.csproj
+++ b/SouthDakotaDiaspora/Site/Site.csproj
@@ -268,9 +268,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\GlobalMethods.cs" />
+    <Compile Include="Models\Books\BookInfo.cs" />
+    <Compile Include="Models\Books\BooksIndexViewModel.cs" />
     <Compile Include="Models\Timeline\TimelineCreateViewModel.cs" />
     <Compile Include="Models\Timeline\TimelineIndexViewModel.cs" />
-    <Compile Include="Models\Timeline\TimelineRow.cs" />
+    <Compile Include="Models\Timeline\TimelineEventInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteStartup.cs" />
   </ItemGroup>
@@ -397,10 +399,10 @@
     <Content Include="Views\Shows\Create.cshtml" />
     <Content Include="Views\Shows\Edit.cshtml" />
     <Content Include="Views\Shows\Delete.cshtml" />
-    <Content Include="Views\Books\Index.cshtml" />
     <Content Include="Views\Books\Create.cshtml" />
     <Content Include="Views\Books\Edit.cshtml" />
     <Content Include="Views\Books\Delete.cshtml" />
+    <Content Include="Views\Books\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
