--- a/SouthDakotaDiaspora/Data/App.config
+++ b/SouthDakotaDiaspora/Data/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+	<appSettings>
+		<add key= "DiscordWebHook" value="https://discord.com/api/webhooks/926522875396120596/kqtP8M_xoIuwMmaS_gSzFJFNVr_hyaOVIEWh3z3RCZrB4i-b0Im_1Vq4OOiW-jlRTlpW" />
+	</appSettings>
+	
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
