--- a/SouthDakotaDiaspora/Data/Data.csproj
+++ b/SouthDakotaDiaspora/Data/Data.csproj
@@ -63,6 +63,7 @@
       <HintPath>..\packages\System.Collections.Immutable.6.0.0\lib\net461\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Interactive.Async, Version=5.1.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Interactive.Async.5.1.0\lib\net461\System.Interactive.Async.dll</HintPath>
